--- a/Exercício4/index.html
+++ b/Exercício4/index.html
@@ -7,13 +7,16 @@
     <title>Caixa em Destaque</title>
 </head>
 <body>
-    <section>
-            <div class="caixa">
-            <img id="pou" src="style/imgs/pou_infinito.jpeg" alt="pou-infinito">
-            <h3 id="texto">MOD DO POU COM DINHEIRO INFINITO 2023</h3>
-            <img id="seta" src="style/imgs/seta.png" alt="seta-vermelha">
-            <button id="butao"><a href="#">DOWNLOAD</a></button>           
-        </div>
+    <section class="conteudo">
+        <button>
+            <a href="#">
+                <div id="noticia">
+                    <h1 id="texto">
+                        "Após o jogo entre Palmeiras(4) x América-MG(0), o time alviverde assume de vez a liderança da competição, ficando cada vez mais perto do seu 11º título do brasileirão"
+                    </h1>
+                </div>
+            </a>             
+        </button>
     </section>
 </body>
 </html>
