--- a/Exercício2/index.html
+++ b/Exercício2/index.html
@@ -17,10 +17,11 @@
             <button class="butao" id="comprar">
                 Comprar agora
             </button>
-            <button class="butao" id="carrinho">
+            <button class="butao" id="carrinho" onclick="addCar()">
                 Adicionar ao carrinho
             </button>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
