--- a/Exercício4/index.html
+++ b/Exercício4/index.html
@@ -8,15 +8,21 @@
 </head>
 <body>
     <section class="conteudo">
-        <button>
-            <a href="#">
-                <div id="noticia">
-                    <h1 id="texto">
-                        "Após o jogo entre Palmeiras(4) x América-MG(0), o time alviverde assume de vez a liderança da competição, ficando cada vez mais perto do seu 11º título do brasileirão"
-                    </h1>
-                </div>
-            </a>             
-        </button>
+        <div>
+        <img id="imagem" src="style/imgs/javascript-circle-dc92b56e539139ec2bf42ebf8393803c-5d48cb37edbef.jpg" alt="Imagem JavaScript">
+        </div>
+        <div id="anuncio">
+        <h1 id="texto">Quer aprender JavaScript do zero?
+            <br>
+            <br>       
+            Então clique em saiba mais!
+        </h1>
+        <a target="_blank" href="https://www.cursoemvideo.com/curso/javascript/">
+            <button id="butao">
+                Saiba mais
+            </button>
+        </a>
+        </div>
     </section>
 </body>
 </html>
